Added test & fixed put method
